<resources>
    <string name="app_name">ALC 4 Phase 1</string>
    <string name="title_about_alc">About ALC</string>
    <string name="title_my_profile">My Profile</string>
    <string name="text_country">Country:</string>
    <string name="text_email">Email:</string>
    <string name="text_phone_number">Phone Number:</string>
    <string name="text_slack_username">Slack Username:</string>
    <string name="text_track">Track:</string>
    <string name="text_welcome_message">Welcome to ALC 4.0</string>
</resources>
